# rs_enums

./: .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  version.json
.github/workflows/: pytest.yml  update-badge.yml  update-version.yml
rs_enums/: __init__.py  option.py  result.py
rs_enums/option/: __init__.py  option.py  tests.py
rs_enums/result/: __init__.py  result.py
tests/: conftest.py  test_option.py  test_result.py
