[project]
name = "rs-enums"
version = "0.1.2-beta"
description = "rs_enums is a Python module inspired by Rust's powerful Option and Result enums."
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "setuptools>=75.8.0",
    "twine>=6.1.0",
    "wheel>=0.45.1",
]
test = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
]

[tool.mypy]
strict = true
