[metadata]
name = rs_enums
version = 0.1.2-beta
author = Kairat Kubanychbek uulu
author_email = kubanychbekukairat@gmail.com
description = rs_enums is a Python module inspired by Rust`s powerful Option and Result enums.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ImKairat/rs_enums
license = Apache-2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0 License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
